<resources>
    <string name="spd_ohf_cancel">Cancel</string>
    <string name="spd_ohf_ok">OK</string>
    <string name="Save">Save</string>
    <string name="Done">Done</string>
    <string name="value_too_long">The length of the opening hours value is %1$d which is longer than the maximum of 255.\n\nPlease simplify the string before saving!</string>
    <string name="would_overwrite_invalid_value">Can\'t add rule to invalid opening hours string. Please correct or delete!</string>
    <string name="add_rule">Add rule</string>
    <string name="add_rule_247">Add rule for 24/7</string>
    <string name="add_rule_closed_on_holidays">Add rule for holidays</string>
    <string name="load_template">Load template</string>
    <string name="save_to_template">Save to template</string>
    <string name="manage_templates">Manage templates</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Delete all</string>
    <string name="load_templates_title">Load templates</string>
    <string name="manage_templates_title">Manage templates</string>
    <string name="save_template">Save template</string>
    <string name="spd_ohf_update_template">Replace template with current opening hours value?</string>
    <string name="spd_ohf_show_all">Show all</string>
    <string name="spd_ohf_save_to_file">Save to file</string>
    <string name="spd_ohf_load_from_file">Load from file</string>
    <string name="spd_ohf_load_from_file_replace">Load from file (replace)</string>
    <string name="spd_ohf_toast_no_file_selected">No target file selected!</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="spd_ohf_update_hint">Press enter to update form</string>
    <string name="default_hint">Opening hours string</string>
    <string name="text_values">Text values</string>
    <string name="edit_template">Edit template</string>
    <string name="name_legend">Name:</string>
    <string name="default_legend">Default:</string>
    <string name="key_legend">Key:</string>
    <string name="spd_ohf_region_legend">Region:</string>
    <string name="spd_ohf_object_legend">Object:</string>
    <string name="spd_ohf_toast_file_read_failure">Unable to read file!</string>
    <string name="spd_ohf_meta">Key: %1$s</string>
    <string name="is_default">%1$s (default)</string>
    <string name="spd_ohf_with_object">%1$s %2$s</string>
    <string name="spd_ohf_region">Region: %1$s</string>
    <string-array name="key_values" translatable="false">
        <item></item>
        <item>opening\_hours</item>
        <item>service\_times</item>
        <item>collection\_times</item>
        <item>fee</item>
        <item>supervised</item>
        <item>lit</item>
        <item>delivery</item>
        <item></item>
    </string-array>
    <string name="all_keys">All</string>
    <string name="opening_hours_key">Opening hours</string>
    <string name="service_times_key">Service times</string>
    <string name="collection_times_key">Collection times</string>
    <string name="fee_key">Fee required</string>
    <string name="supervised_key">Supervised</string>
    <string name="lit_key">Lit</string>
    <string name="delivery_key">Delivery times</string>
    <string name="spd_ohf_custom_key">Custom key</string>
    <string-array name="key_entries" translatable="false">
        <item>@string/all_keys</item>
        <item>@string/opening_hours_key</item>
        <item>@string/service_times_key</item>
        <item>@string/collection_times_key</item>
        <item>@string/fee_key</item>
        <item>@string/supervised_key</item>
        <item>@string/lit_key</item>
        <item>@string/delivery_key</item>
        <item>@string/spd_ohf_custom_key</item> 
    </string-array>
    <string name="weekdays_with_lunch">Weekdays with lunch break</string>
    <string name="weekdays_with_lunch_late_shopping">Weekdays with lunch break and late shopping</string>
    <string-array name="weekdays" translatable="false">
        <item>@string/oh_monday</item>
        <item>@string/oh_tuesday</item>
        <item>@string/oh_wednesday</item>
        <item>@string/oh_thursday</item>
        <item>@string/oh_friday</item>
        <item>@string/oh_saturday</item>
        <item>@string/oh_sunday</item>
    </string-array>
    <string name="weekdays_late_shopping">Weekdays with late shopping</string>
    <string name="collection_times_weekdays">Once per weekday</string>
    <string name="group_header">Group %1$s</string>
    <string name="rule_header">Rule %1$s</string>
    <string name="loaded_default">Loaded default template</string>
    <string name="Delete">Delete</string>
    <string name="add_modifier_comment">Add modifier/comment</string>
    <string name="add_week_range">Add week range</string>
    <string name="add_holiday">Add holiday</string>
    <string name="timespan_menu">Add time span ...</string>
    <string name="time_time">Time - time</string>
    <string name="time_extended_time">Time - extended time</string>
    <string name="variable_time_time">Var. time - time</string>
    <string name="variable_time_extended_time">Var. time - extended time</string>
    <string name="time_variable_time">Time - var. time</string>
    <string name="variable_time_variable_time">Var. time - var. time</string>
    <string name="time">Time</string>
    <string name="time_open_end">Time-open end</string>
    <string name="variable_time">Variable time</string>
    <string name="variable_time_open_end">Variable time-open end</string>
    <string name="start_at_midnight">Start at midnight</string>
    <string name="week_day_range">Add week day range</string>
    <string name="occurrence_in_month">Add occurrence in month</string>
    <string name="daterange_menu">Add date range ...</string>
    <string name="date_date">Date - date</string>
    <string name="variable_date_date">Variable date - date</string>
    <string name="date_variable_date">Date - variable date</string>
    <string name="variable_date_variable_date">Variable date - variable date</string>
    <string name="occurrence_occurrence">Occurrence in month - occurrence in month</string>
    <string name="occurrence_date">Occurrence in month - date</string>
    <string name="date_occurrence">Date - occurrence in month</string>
    <string name="occurrence_variable_date">Occurrence in month - variable date</string>
    <string name="variable_date_occurrence">Variable date - occurrence in month</string>
    <string name="date_open_end">Date - open end</string>
    <string name="variable_date_open_end">Variable date - open end</string>
    <string name="occurrence_open_end">Occurrence in month - open end</string>
    <string name="with_offsets">With offsets...</string>
    <string name="spd_ohf_year_range_menu">Add year range ...</string>
    <string name="add_year_range">Add year range</string>
    <string name="spd_ohf_add_year_range_openended">Add starting year</string>
    <string name="rule_type">Show rule type</string>
    <string name="duplicate_rule">Duplicate</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="display_time_picker">Display time picker</string>
    <string name="ticks_15_minute">Switch to 15 minute ticks</string>
    <string name="ticks_5_minute">Switch to 5 minute ticks</string>
    <string name="ticks_1_minute">Switch to 1 minute ticks</string>
    <string name="show_offset">Show offset</string>
    <string name="show_start_offset">Show start offset</string>
    <string name="show_end_offset">Show end offset</string>
    <string name="show_interval">Show interval</string>
    <string name="show_useAsWeekDay">Show use</string>
    <string name="normal_rule">Normal</string>
    <string name="additive_rule">Additive</string>
    <string name="fallback_rule">Fallback</string>
    <string name="interval_minutes">Interval (minutes)</string>
    <string name="interval_years">Interval (years)</string>
    <string name="interval_weeks">Interval (weeks)</string>
    <string name="offset_mins">Offset (±mins)</string>
    <string name="offset_days">Offset (±days)</string>
    <string name="date_range">Date range</string>
    <string name="date">Date</string>
    <string name="date_weekday_occurrence">Date (weekday in month)</string>
    <string name="week_range">Week range</string>
    <string name="weeks">Weeks</string>
    <string name="year_range">Year range</string>
    <string name="years">Years</string>
    <string name="spd_ohf_starting">Starting</string>
    <string name="spd_ohf_starting_year">Starting year</string>
    <string name="modifier">Modifier</string>
    <string name="comment">Comment</string>
    <string name="use_as_weekday">Use like weekday</string>
    <string name="twentyfourseven">24 hours, 7 days a week</string>
    <string name="to">to</string>
    <string name="oh_easter" translatable="false">easter</string>
    <string name="easter">Easter</string>
    <string name="oh_sunrise" translatable="false">sunrise</string>
    <string name="oh_sunset" translatable="false">sunset</string>
    <string name="oh_dawn" translatable="false">dawn</string>
    <string name="oh_dusk" translatable="false">dusk</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="dawn">Dawn</string>
    <string name="dusk">Dusk</string>
    <string name="public_holidays">Public holidays</string>
    <string name="school_holidays">School holidays</string>
    <string name="occurrence_in_month_title">Occurrence in month</string>
    <string name="oh_monday" translatable="false">Mo</string>
    <string name="oh_tuesday" translatable="false">Tu</string>
    <string name="oh_wednesday" translatable="false">We</string>
    <string name="oh_thursday" translatable="false">Th</string>
    <string name="oh_friday" translatable="false">Fr</string>
    <string name="oh_saturday" translatable="false">Sa</string>
    <string name="oh_sunday" translatable="false">Su</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">We</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">Su</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="oh_january" translatable="false">Jan</string>
    <string name="oh_february" translatable="false">Feb</string>
    <string name="oh_march" translatable="false">Mar</string>
    <string name="oh_april" translatable="false">Apr</string>
    <string name="oh_may" translatable="false">May</string>
    <string name="oh_june" translatable="false">Jun</string>
    <string name="oh_july" translatable="false">Jul</string>
    <string name="oh_august" translatable="false">Aug</string>
    <string name="oh_september" translatable="false">Sep</string>
    <string name="oh_october" translatable="false">Oct</string>
    <string name="oh_november" translatable="false">Nov</string>
    <string name="oh_december" translatable="false">Dec</string>
    <string name="open">open</string>
    <string name="closed">closed</string>
    <string name="off">off</string>
    <string name="unknown">unknown</string>
    <string name="oh_open" translatable="false">open</string>
    <string name="oh_closed" translatable="false">closed</string>
</resources>