<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical" >

   <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/weekDayContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textMo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/monday_short" />

            <CheckBox
                android:id="@+id/checkBoxMo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textMo"
                android:tag="@string/oh_monday" />

            <CheckBox
                android:id="@+id/checkBoxTu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxMo"
                android:layout_toRightOf="@id/checkBoxMo"
                android:layout_toEndOf="@id/checkBoxMo"
                android:tag="@string/oh_tuesday" />

            <CheckBox
                android:id="@+id/checkBoxWe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxTu"
                android:layout_toRightOf="@id/checkBoxTu"
                android:layout_toEndOf="@id/checkBoxTu"
                android:tag="@string/oh_wednesday" />

            <CheckBox
                android:id="@+id/checkBoxTh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxWe"
                android:layout_toRightOf="@id/checkBoxWe"
                android:layout_toEndOf="@id/checkBoxWe"
                android:tag="@string/oh_thursday" />

            <CheckBox
                android:id="@+id/checkBoxFr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxTh"
                android:layout_toRightOf="@id/checkBoxTh"
                android:layout_toEndOf="@id/checkBoxTh"
                android:tag="@string/oh_friday" />

            <CheckBox
                android:id="@+id/checkBoxSa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxFr"
                android:layout_toRightOf="@id/checkBoxFr"
                android:layout_toEndOf="@id/checkBoxFr"
                android:tag="@string/oh_saturday" />

            <CheckBox
                android:id="@+id/checkBoxSu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxSa"
                android:layout_toRightOf="@id/checkBoxSa"
                android:layout_toEndOf="@id/checkBoxSa"
                android:tag="@string/oh_sunday" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxTu"
                android:layout_alignLeft="@id/checkBoxTu"
                android:layout_alignStart="@id/checkBoxTu"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/tuesday_short" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxWe"
                android:layout_alignLeft="@id/checkBoxWe"
                android:layout_alignStart="@id/checkBoxWe"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/wednesday_short" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxTh"
                android:layout_alignLeft="@id/checkBoxTh"
                android:layout_alignStart="@id/checkBoxTh"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/thursday_short" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxFr"
                android:layout_alignLeft="@id/checkBoxFr"
                android:layout_alignStart="@id/checkBoxFr"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/friday_short" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxSa"
                android:layout_alignLeft="@id/checkBoxSa"
                android:layout_alignStart="@id/checkBoxSa"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/saturday_short" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxSu"
                android:layout_alignLeft="@id/checkBoxSu"
                android:layout_alignStart="@id/checkBoxSu"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="@string/sunday_short" />
        </RelativeLayout>

        <include layout="@layout/menu" />
    </LinearLayout>

</LinearLayout>