<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical" >

   <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/checkBoxContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textJan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:text="@string/january" />

            <CheckBox
                android:id="@+id/checkBoxJan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textJan"
                android:tag="Jan" />

            <CheckBox
                android:id="@+id/checkBoxFeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxJan"
                android:layout_toRightOf="@id/checkBoxJan"
                android:tag="Feb" />

            <CheckBox
                android:id="@+id/checkBoxMar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxFeb"
                android:layout_toRightOf="@id/checkBoxFeb"
                android:tag="Mar" />

            <CheckBox
                android:id="@+id/checkBoxApr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxMar"
                android:layout_toRightOf="@id/checkBoxMar"
                android:tag="Apr" />

            <CheckBox
                android:id="@+id/checkBoxMay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxApr"
                android:layout_toRightOf="@id/checkBoxApr"
                android:tag="May" />

            <CheckBox
                android:id="@+id/checkBoxJun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxMay"
                android:layout_toRightOf="@id/checkBoxMay"
                android:tag="Jun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxFeb"
                android:layout_alignLeft="@id/checkBoxFeb"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:text="@string/february" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxMar"
                android:layout_alignLeft="@id/checkBoxMar"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:text="@string/march" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxApr"
                android:layout_alignLeft="@id/checkBoxApr"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:text="@string/april" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxMay"
                android:layout_alignLeft="@id/checkBoxMay"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:text="@string/may" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxJun"
                android:layout_alignLeft="@id/checkBoxJun"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:text="@string/june" />

           <TextView
                android:id="@+id/textJul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/checkBoxJan"
                android:paddingLeft="6dp"
                android:text="@string/july" />

            <CheckBox
                android:id="@+id/checkBoxJul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textJul"
                android:tag="Jul" />

            <CheckBox
                android:id="@+id/checkBoxAug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxJul"
                android:layout_toRightOf="@id/checkBoxJul"
                android:tag="Aug" />

            <CheckBox
                android:id="@+id/checkBoxSep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxAug"
                android:layout_toRightOf="@id/checkBoxAug"
                android:tag="Sep" />

            <CheckBox
                android:id="@+id/checkBoxOct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxSep"
                android:layout_toRightOf="@id/checkBoxSep"
                android:tag="Oct" />

            <CheckBox
                android:id="@+id/checkBoxNov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxOct"
                android:layout_toRightOf="@id/checkBoxOct"
                android:tag="Nov" />

            <CheckBox
                android:id="@+id/checkBoxDec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/checkBoxNov"
                android:layout_toRightOf="@id/checkBoxNov"
                android:tag="Dec" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/checkBoxAug"
                android:layout_below="@id/checkBoxFeb"
                android:paddingLeft="6dp"
                android:text="@string/august" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBoxMar"
                android:layout_alignLeft="@id/checkBoxSep"
                android:paddingLeft="6dp"
                android:text="@string/september" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxOct"
                android:layout_alignLeft="@id/checkBoxOct"
                android:paddingLeft="6dp"
                android:text="@string/october" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxNov"
                android:layout_alignLeft="@id/checkBoxNov"
                android:paddingLeft="6dp"
                android:text="@string/november" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/checkBoxDec"
                android:layout_alignLeft="@id/checkBoxDec"
                android:paddingLeft="6dp"
                android:text="@string/december" />
            
        </RelativeLayout>

        <include layout="@layout/menu" />
    </LinearLayout>

</LinearLayout>